src/App.css
@import "~react-image-gallery/styles/css/image-gallery.css";

.App {
  width: 100vw;
  height: 100vh;
}

body {
  margin: 0;
  padding: 0;
}

.Header {
  height: 6%;
}

.logo {
  height: 55px;
  width: 55x; 
}

.bigLogo {
  padding-top: 8rem;
  padding-bottom: 3rem;
  width: 300px;
  height: 450px;
}

.paragraph {
  padding-bottom: 3rem;
}

.map {
  padding-top: 8rem;
  padding-bottom: 3rem;
  width: 100%;
  height: auto;
  flex:1;
  position: absolute;
  top: 50%;
  left: 50%;
}

.hiddenButtonContainer {
  position: relative;
  width: 50%;
  text-align: center;
}

.hiddenButtonContainer .hiddenButton {
  position: absolute;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  color: transparent;
  font-size: 16px;
  padding: 12px 24px;
  border: none;
  border-radius: 5px;
  /*background-color: transparent;*/
}

.hiddenButtonKitisi {
  top: 120%;
  left: 120%;
}

.hiddenButtonKisilwa {
  top: 90%;
  left: 55%;
}

.villageTitle {
  text-align: center;
  padding-top: 3rem;
  padding-bottom: 1rem;
}

.galleryTitle {
  text-align: center;
  padding-top: 4rem;
  padding-bottom: 2rem;
}

.frontImage {
  margin-bottom: 3rem;
}

.frame {
  background-color: #F0F2DD;
  border-image: none;
  border-radius: 30px 30px 30px 30px;
  padding-top: 10px;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0.5rem;
  margin-bottom: 2rem;
  width: 50%;
  position: relative;
  top: 10%;
  left: 25%
}

.multi-line {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 4;
}

.image {
  margin-top: 1rem;
  margin-right: 1rem;
  border-radius: 30px 30px 30px 30px;
  width: 100%;
  max-width: 300px;
  height: auto;
}

.gallery {
  background-color: black;
  min-height: 100vh;
  height: 100%;
}

.galleryButton {
  position: absolute;
  top: 4rem;
  left: 2rem;
}

.villageImage {
  justify-content: center;
}

.photoDescription {
  margin-left: 1rem;
  text-align: start;
}

.indietroButton {
  font-size: 18px;
}

.avantiButton {
  margin-left: 5px;
  font-size: 18px;
}

